--- a/stylesheets/scss/layouts/_homepage.scss
+++ b/stylesheets/scss/layouts/_homepage.scss
@@ -834,6 +834,12 @@
   flex-direction: column;
   align-items: center;
   padding-bottom: 6rem;
+  padding-right: 1.5rem;
+  padding-left: 1.5rem;
+
+  @media (max-width: 768px) {
+    padding-bottom: 3rem;
+  }
 
   &__img {
     width: 8rem;
